# minidbg

./: .gitignore  CMakeLists.txt  Dependencies.cmake  devenv.nix  justfile
include/libdbg/: libdbg.h
src/: CMakeLists.txt  libdbg.cc
test/: CMakeLists.txt  tests.cpp
tools/: CMakeLists.txt  minidbg.cc
